Handle null cases better. Improve layer control and visibility. Change legend size to fixed

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -115,8 +115,8 @@ h1 {
   z-index: 1000;
   bottom: 10%;
   left: 2%;
-  width: 12%;
-  height: 15%;
+  width: 160px;
+  height: 120px;
   background-color: white;
   border-radius: 15px;
 }
@@ -244,7 +244,7 @@ tr:hover {
 
 tr:hover::after {
   content: '';
-	position: absolute;
+	position: fixed; /*originally used absolute but does not work in safary*/
 
 	border: 18px solid transparent;
 	border-left-color: white;
